# python-pins

./: .gitignore  README.md  notes.md  pyproject.toml  setup.py
pins/: __init__.py  board_folder.py  board_parent.py  board_rstudio_connect.py  classes.py
pins/connect/: __init__.py
